Revision history for Perl module Handel

1.00011 Wed Aug 20 19:32:44 2008
    - Order->create($cart) uses storage->has_column instead of can
    - Removed Build.PL to make Module::Install happy
    - Removed $self->stash->clear call in Checkout->process
    - Checkout->new phases now eval strings in arrayref correctly
    - Deprecating phase names as constants. Just use strings and be happy.
    - Added tests for plugins add_handler using strings
    - Fixed compat.t tests under 5.10
    - Fixed storage_dbic_clone.t failure under 5.10

1.00010 Sat Mar 1 13:59:23 2008
    - Fixed some perl critic failures
    - Added Session plugins to Catalyst support prereqs
    - Added reminder to add Session plugins to MyApp in starter

1.00009 Sat Jan 12 22:14:22 2008
    - Cart->restore does update instead of quantity in case autoupdates
        are disabled
    - Cart->restore(REPLACE) now checks to make sure name/description exists

1.00008 Sun Jan 6 17:36:23 2008
    - Storage::DBIC search/search_items now assume that any filter
        column is me. if there is no . in the name. This is a fix
        for Mango, which joins pricing for wishlists and a search on
        id yields ambiguous column name errors.

1.00007 Tue Jan 1 12:16:23 2008
    - Fixed instance of using blessed without loading Scalar::Util
    - Use DBIx::Class 0.08008 and set default DATETIME timezones to UTC

1.00006 Sun Oct 21 13:10:23 2007
    - Updated Clone prereq version to 0.28 (Collin Condray)
    - Fixed Quicktart to use schema --install (Charlie Garrison)
    - Fixed various spelling errors and critic checks
    - Added test skips for DBD::SQLite 1.14

1.00005 Wed Aug 22 21:42:33 2007
    - Catalyst Helper code uses as_string instead of format
    - Updated profiles regexps for newer YAML

1.00004 Tue Aug 21 21:01:10 2007
    - Removed RDBO M::I feature in Makefile.PL (RT#28461,ANDK)
    - Fixed exception tests message checks under l10n (RT#28927,RDROUSIES)