@@ -42,7 +42,7 @@ license 'perl';
 perl_version '5.008001';
 all_from 'lib/Handel.pm';
 
-requires 'DBIx::Class'              => '0.08008';
+requires 'DBIx::Class'              => '0.08103';
 requires 'DBIx::Class::UUIDColumns' => '0.02000';
 requires 'DBIx::Class::Validation'  => '0.02000';
 requires 'Data::Currency'           => '0.04002';
